--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
-version: '3.7'
+version: '3.6'
 
 services:
 
   www:
-    image: node
+    image: node:lts-buster
     volumes:
       - './www:/app'
     working_dir: '/app'
     entrypoint: '/bin/bash -c'
     command:
       - |
-        npm install
-        npm start
+        npm start -- -H 0.0.0.0
     networks: [ 'my-network' ]
     ports: [ '8000:8000' ]
+
 networks:
   my-network:
