--- a/www/package.json
+++ b/www/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "gatsby": "^2.32.3",
+    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-remark": "^2.16.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
