--- a/www/package.json
+++ b/www/package.json
@@ -8,7 +8,7 @@
     "test": "jest"
   },
   "author": "Luke 10x",
-  "license": "ISC",
+  "license": "",
   "dependencies": {
     "gatsby": "^2.32.3",
     "gatsby-source-filesystem": "^2.11.0",
@@ -16,7 +16,6 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.1",
-    "typeface-roboto": "^1.1.13"
+    "styled-components": "^5.2.1"
   }
 }
