--- a/www/package.json
+++ b/www/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "gatsby develop",
+    "build": "gatsby build",
     "test": "jest"
   },
   "author": "Luke 10x",
   "license": "",
   "dependencies": {
     "gatsby": "^2.32.3",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-transformer-remark": "^2.16.0",
     "react": "^17.0.1",
