--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - './www:/app'
     working_dir: '/app'
     entrypoint: '/bin/bash -c'
+    user: node
     command:
       - |
         npm start -- -H 0.0.0.0
