--- a/www/package.json
+++ b/www/package.json
@@ -11,14 +11,16 @@
   "author": "Luke 10x",
   "license": "",
   "dependencies": {
-    "gatsby": "^2.32.3",
+    "gatsby": "^4.4.0",
     "gatsby-plugin-cname": "^1.0.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-source-filesystem": "^2.11.0",
-    "gatsby-transformer-remark": "^2.16.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gatsby-plugin-postcss": "^5.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-remark": "^5.4.0",
+    "postcss": "^8.4.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.3.3"
   }
 }
