--- a/www/package.json
+++ b/www/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "gatsby": "^4.4.0",
     "gatsby-plugin-cname": "^1.0.0",
+    "gatsby-plugin-google-tagmanager": "^4.4.0",
     "gatsby-plugin-postcss": "^5.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
     "gatsby-source-filesystem": "^4.4.0",
